# evm

./: .dockerignore  .envrc.example  .gitdocs.yml  .gitignore  .gitmodules  .golangci.yml  .markdownlint.yml  .mergify.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION_GUIDE.md  Makefile  README.md  apphash_investigation.md  buf.work.yaml  default.nix  docker-compose.yml  erc20-deploy-estimate.json  erc20-mint-estimate.json  erc20-mint-override.json  estimate-gas-test.json  fixed-app.go  flake.nix  gitdocs.config.json  go.mod  go.sum  gomod2nix.toml  interfaces.go  local_node.sh  native-transfer-override.json  native-transfer.json  nativeBurn-precompile-demo.md  start.sh  test-nativeburn.sh
tests/integration_tests/: .flake8  conftest.py  cosmoscli.py  expected_constants.py  ibc_utils.py  network.py  pyproject.toml  shell.nix  test_account.py  test_basic.py  test_call.py  test_contract.py  test_debug_traceblock.py  test_distribution.py  test_distribution_precompile.py  test_eip1559.py  test_erc20.py  test_estimate_gas.py  test_exploit.py  test_fee_history.py  test_filters.py  test_gas.py  test_ibc.py  test_ledger.py  test_min_gas_price.py  test_permission.py  test_precompile.py  test_priority.py  test_staking.py  test_staking_precompile.py  test_subscribe.py  test_tracers.py  utils.py
tests/integration_tests/configs/: accounts.jsonnet  chains.jsonnet  default.jsonnet  enable-indexer.jsonnet  exploit.jsonnet  fee-history.jsonnet  hw.jsonnet  ibc.jsonnet  min_gas_price.jsonnet  min_gas_price_eq.jsonnet  min_gas_price_lte.jsonnet  staking.jsonnet
(+1691 files in other folders)
