[project]
name = "integration-tests"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest >= 8.3.4",
    "pystarport >= 0.2.5",
    "pytest-github-actions-annotate-failures >= 0.3.0",
    "flake8-black >= 0.3.6",
    "flake8-isort >= 6.1.2",
    "pyunormalize >= 16.0.0",
    "cprotobuf >= 0.1.11",
    "web3 >= 7.3.0",
    "eth-bloom >= 3.0",
    "flaky >= 3.8.1",
    "pytest-asyncio >= 1.3.0",
    "eth-contract >= 0.3.0",
    "py-ecc >= 8.0.0",
    "pyrevm >= 0.3.3",
]

[dependency-groups]
dev=[
    "attrs >= 24.2.0",
    "referencing >= v0.35.1",
    "rpds-py >= v0.22.3",
    "aiohappyeyeballs >= 2.4.4",
    "types-requests >= 2.32.0.20250328",
    "typing-inspection >= 0.4.0",
]

[tool.uv.sources]
pystarport = { git = "https://github.com/MANTRA-Chain/pystarport.git", branch = "main" }
eth-contract = { git = "https://github.com/mmsqe/eth-contract.git", branch = "main" }
pyrevm = { git = "https://github.com/yihuang/pyrevm.git", branch = "master" }
cprotobuf = { git = "https://github.com/yihuang/cprotobuf.git", branch = "master" }

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
